@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>2.19</version>
+    <version>2.21</version>
     <relativePath />
   </parent>
 
@@ -16,7 +16,7 @@
   </licenses>
 
   <artifactId>git</artifactId>
-  <version>3.0.3-SNAPSHOT</version>
+  <version>3.0.6-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <name>Jenkins Git plugin</name>
   <description>Integrates Jenkins with GIT SCM</description>
@@ -28,10 +28,7 @@
     <jenkins.version>1.625.3</jenkins.version>
     <java.level>7</java.level>
     <no-test-jar>false</no-test-jar>
-    <!-- Use the same configuration than before. -->
-    <concurrency>2</concurrency>
-    <permgen.size>160m</permgen.size>
-    <argLine>-XX:MaxPermSize=${permgen.size}</argLine>
+    <concurrency>1C</concurrency>
     <!-- TODO: Ongoing work on https://github.com/MarkEWaite/git-plugin/tree/master-findbugs-fixes. -->
     <findbugs.failOnError>false</findbugs.failOnError>
     <workflow.version>1.14.2</workflow.version>
@@ -164,7 +161,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>scm-api</artifactId>
-      <version>2.0.1-beta-1</version>
+      <version>2.0.3</version>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
